# BitchXMPP

lib/gnutls/gnutls/lib/po/: nl.po.in
lib/loudmouth/: Makefile.am  configure.ac
lib/loudmouth/docs/: Makefile.am
lib/loudmouth/docs/reference/: Makefile.am
lib/loudmouth/examples/: Makefile.am  lm-change-password.c  lm-register.c  lm-send-async.c  test-http-proxy.c  test-lm.c  test-tunnel.c
lib/loudmouth/loudmouth/: Makefile.am  asyncns.c  lm-asyncns-resolver.c  lm-asyncns-resolver.h  lm-blocking-resolver.c  lm-blocking-resolver.h  lm-connection.c  lm-connection.h  lm-data-objects.c  lm-data-objects.h  lm-debug.c  lm-debug.h  lm-dummy.c  lm-dummy.h  lm-error.c  lm-error.h  lm-feature-ping.c  lm-feature-ping.h  lm-idummy.c  lm-idummy.h  lm-internals.h  lm-message-handler.c  lm-message-handler.h  lm-message-node.c  lm-message-node.h  lm-message-queue.c  lm-message-queue.h  lm-message.c  lm-message.h  lm-misc.c  lm-misc.h  lm-old-socket.c  lm-old-socket.h  lm-parser.c  lm-parser.h  lm-proxy.c  lm-proxy.h  lm-resolver.c  lm-resolver.h  lm-sasl.c  (+24 more)
lib/loudmouth/tests/: Makefile.am  test-data-objects.c  test-parser.c
lib/loudmouth/tests/parser-tests/: Makefile.am
